--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -121,6 +121,12 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-block;
 }
 
+.title-link {
+    color: inherit;
+    text-decoration: none;
+    -webkit-text-fill-color: inherit;
+}
+
 .title-icon {
     display: inline-block;
     margin-right: var(--spacing-sm);
